src/objects/Business_Role__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <description>Short Description of Business Role</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entry_Logic__c</fullName>
        <description>Entry Logic e.g. AND, OR, {0} AND {2} AND NOT({3})</description>
        <label>Entry Logic</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Id_Calc__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External ID (formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>Unique External Id (BR Name)</description>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines if Business Role is active or not</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Business Role</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Entry_Logic__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>